fix: header logo position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ header {
 }
 
 .header-logo .logo-light {
-  display: block;
+  display: inline-block;
 }
 
 .header-logo .logo-dark {
@@ -136,7 +136,7 @@ header {
 }
 
 .navbar-light .header-logo .logo-dark {
-  display: block;
+  display: inline-block;
 }
 
 .header-nav {
